<resources>

    <string name="app_name">StringAnnotations Views sample</string>

    <!-- Annotations demonstration -->

    <!-- region Individual types -->

    <string name="demo1">Demo #1: this text is <annotation color="blue">bluuuuue</annotation></string>

    <string name="demo2">Demo #2: this text is <annotation background="#ededed">on background and with %1$s</annotation></string>

    <string name="demo3">Demo #3: <annotation clickable="$arg$clickable$0">click me</annotation> and <annotation clickable="$arg$clickable$1">me as well</annotation></string>

    <string name="demo4">Demo #4: regular, <annotation style="bold">bold</annotation>, <annotation style="italic">italic</annotation> and <annotation style="bold|italic">combined</annotation> text</string>

    <string name="demo5">Demo #5: <annotation style="strikethrough">crossed out</annotation> and <annotation style="underline">underlined</annotation> text</string>

    <string name="demo6">Demo #6: text with absolute size of 20.5 in <annotation size-absolute="20.5">pixels</annotation>, <annotation size-absolute="20.5dp">DIPs</annotation> and <annotation size-absolute="20.5sp">SPs</annotation></string>

    <string name="demo7">Demo #7: color value is being set in <annotation color="$arg$color$0">runtime</annotation></string>

    <!-- endregion -->

    <!-- region Common placeholders -->

    <string name="placeholder1">Placeholder#1</string>
    <string name="placeholder2">Placeholder#2</string>
    <string name="placeholder3">Placeholder#3</string>

    <!-- endregion -->

</resources>